# libhal-armcortex

./: .clang-format  .clang-tidy  .cspell.json  .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  conanfile.py  conanfile.txt  default_profile  toolchain.cmake
.github/workflows/: 3.0.0-alpha.1.yml  ci.yml  deploy-version.yml  deploy.yml  presubmit.yml  static.yml
conan/profiles/: cortex  cortex-m  cortex-m0  cortex-m0plus  cortex-m1  cortex-m3  cortex-m4  cortex-m4+nofp  cortex-m4f  cortex-m7  cortex-m7f  thumbv6  thumbv7  thumbv8
conan/settings/: settings_user.yml
demos/: CMakeLists.txt  conanfile.py  linker.ld  main.cpp
demos/applications/: dwt_counter.cpp
docs/: README.md  config.toml  doxygen.conf  prerequisites.md
docs/content/contribution/: _index.md
docs/content/design/: _index.md  design.md
docs/content/guides/: data_section_init.md  dwt_usage.md  system_timer_usage.md  using_interrupts.md
docs/layouts/partials/: logo.html
include/libarmcortex/: dwt_counter.hpp  interrupt.hpp  startup.hpp  system_control.hpp  system_timer.hpp  systick_timer.hpp
include/libhal-armcortex/: dwt_counter.hpp  interrupt.hpp  startup.hpp  system_control.hpp  systick_timer.hpp
libarmcortex/: dwt_counter.hpp  dwt_counter.test.cpp  interrupt.hpp  interrupt.test.cpp  system_timer.hpp  system_timer.test.cpp
libarmcortex/peripherals/: dwt_counter.hpp  dwt_counter.test.cpp  interrupt.hpp  interrupt.test.cpp  system_timer.hpp  system_timer.test.cpp
libarmcortex/platform/: core_cm4.h  exceptions.hpp
linker_scripts/libhal-armcortex/: standard.ld
scripts/: includes.sh
src/: dwt_counter.cpp  dwt_counter_reg.hpp  interrupt.cpp  interrupt_reg.hpp  system_controller.cpp  system_controller_reg.hpp  systick_timer.cpp  systick_timer_reg.hpp
test_package/: CMakeLists.txt  conanfile.py  linker.ld  main.cpp  newlib.cpp
tests/: CMakeLists.txt  all_tests.cpp  conanfile.py  conanfile.txt  dwt_counter.test.cpp  helper.hpp  interrupt.test.cpp  libhal.tweaks.hpp  main.test.cpp  run.sh  system_timer.test.cpp  systick_timer.test.cpp  unity.test.cpp
